Build in CI using JDK 17 (#199)
Required by Sonarqube